<resources>
    <string name="app_name">MedicFinder</string>
    <string name="authentication">Authentication</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="select_day_prompt">Select Day</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="select_specialty">Select Speciality :</string>
    <string name="select_city">Select City :</string>
    <string name="select_Location">City</string>
    <string name="patient_space">Patient Space</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="your_are_a">Your are a :</string>
    <string name="doctor_space">Doctor Space</string>
    <string name="create_account">Create Account</string>
    <string name="search_enter_name_or_gender">Search (name, gender or city)</string>
    <string-array name="specialties_array">
        <item>Cardiologist</item>
        <item>Dermatologist</item>
        <item>Orthopedic Surgeon</item>

    </string-array>
    <string-array name="moroccan_cities">
        <item>Casablanca</item>
        <item>Rabat</item>
        <item>Marrakech</item>
        <item>Fes</item>
        <item>Tangier</item>
        <item>Agadir</item>
        <item>Meknes</item>
        <item>Oujda</item>
        <item>Kenitra</item>
        <item>Tetouan</item>
        <item>Essaouira</item>
        <item>Nador</item>
        <item>El Jadida</item>
        <item>Khouribga</item>
        <item>Beni Mellal</item>
        <item>Errachidia</item>
        <item>Taza</item>
        <item>Settat</item>
        <item>Larache</item>
        <!-- Add more cities as needed -->
    </string-array>
    <string name="title_activity_map">MapActivity</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="get_started">GET STARTED</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="welcome_to_medicfinder_n_nto_help_you_find_the_right_doctor_please_choose_a_speciality_below_and_tap_search">Welcome to MedicFinder!\n\nTo help you find the right doctor, please choose a speciality below and tap \'Search\'.</string>
    <string name="search">Search</string>
    <string name="doctors_near_me">Doctors Near Me</string>
    <string name="are_you_a_doctor">Are you a Doctor?</string>
    <string name="step_1_4_personnal_info">Step 1/4 : Personnal info</string>
    <string name="full_name">Full name</string>
    <string name="enter_email_abc_xyz_com">Enter email : abc@xyz.com</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="next">Next</string>
    <string name="step_2_4_professional_info">Step 2/4 : Professional info</string>
    <string name="number_of_medical_licence">Number of medical licence</string>
    <string name="experience_years_1_year_2_years">Experience years(1 year ,2 years,...) *</string>
    <string name="step_4_4_working_hours">Step 4/4 : Working Hours</string>
    <string name="days_of_work">Days of work:</string>
    <string name="hour_of_starting">Hour of starting:</string>
    <string name="hour_of_closing">Hour of closing:</string>
    <string name="additional_info">Additional info... *</string>
    <string name="submit">Submit</string>
    <string name="step_3_4_health_center_information">Step 3/4 : Health center information</string>
    <string name="phone_number">Phone Number **</string>
    <string name="consultation_price">Consultation Price</string>
    <string name="attention_your">Attention! Your health center location is very important ! Add the location by clicking on the button bellow\n PS: you can change the generated address if you want to.</string>
    <string name="provide_your_health_facility_phone_number_to_enable_patients_to_call_and_make_a_appointment">** provide your health facility phone number to enable patients to call and make a appointment</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="personnal_information">Personnal information</string>
    <string name="name">Name:</string>
    <string name="emaill">Email:</string>
    <string name="gender">Gender:</string>
    <string name="professional_information">Professional information</string>
    <string name="experience">Experience:</string>
    <string name="speciality">Speciality:</string>
    <string name="health_care_facility_information">Health care facility information</string>
    <string name="price">Price:</string>
    <string name="price_info">Price Info:</string>
    <string name="location">Location:</string>
    <string name="city">City:</string>
    <string name="working_schedule">Working Schedule</string>
    <string name="woring_days">Woring Days:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="show_directions">show directions</string>
    <string name="call_now">CALL now</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="bonjour_dr">Bonjour Dr.</string>
    <string name="modifie_personnal_information">Modifie personnal information</string>
    <string name="_0_people_have_seen_your_account_so_far">0 People have seen your account so far</string>
    <string name="your_favorite_doctors">Your favorite Doctors</string>
    <string name="delete_account">delete account</string>
    <string name="you_are_a_patient_nfeeling_tired_n_find_a_doctor">You are a Patient?\nFEELING TIRED?\n FIND A DOCTOR.</string>
    <string name="select_search_area">SELECT SEARCH AREA</string>
    <string name="select_doctor_specialty">SELECT DOCTOR SPECIALTY</string>
    <string name="view_availible_doctors">View Availible doctors</string>
    <string name="search_nearby_doctors">search nearby doctors</string>
    <string name="you_are_a_doctor_n_create_a_publicity_for_your_healthcare_office">You are a Doctor?\n Create a publicity for your Healthcare Office</string>
    <string name="password_change_to_new_password">Password (change to new password):</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_passwordd">Confirm Password</string>
    <string name="phone_numberr">Phone Number:</string>
    <string name="phone_number_05xxxxxxxx">Phone number (05xxxxxxxx)</string>
    <string name="consultation_price_mad">Consultation Price(MAD):</string>
    <string name="consult_price">Consult Price</string>
    <string name="working_days">Working days:</string>
    <string name="hour_of_startingg">Hour of starting:</string>
    <string name="hour_of_closingg">Hour of closing:</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="modifie_profile">Modifie Profile</string>
    <string name="password_enter_new_password">Password (enter new password):</string>
    <string name="choose_category">Choose Category</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="bonjour">Bonjour!</string>
    <string name="select_language">Select language :</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="doctors_list">Doctors list</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>

    <string-array name="language_options">
        <item>Select language</item>
        <item>Francais</item>
        <item>English</item>
    </string-array>
</resources>