<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/Profile"
            android:icon="@drawable/placeholder_image"
            android:title="@string/my_profile"
            android:iconTint="@color/red"
            />
        <item
            android:id="@+id/searchDoctor"
            android:icon="@drawable/person"
            android:title="@string/doctors_list"
            />
        <item
            android:id="@+id/searchLocation"
            android:icon="@drawable/location"
            android:title="@string/doctors_near_me"
            />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"
            />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            />
    </group>
</menu>