<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:background="@drawable/profilee"
    android:id="@+id/drawerLayout"
    tools:context=".DoctorInfoActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="25sp"
            app:srcCompat="@drawable/back" />



        <ImageView
            android:id="@+id/DoctorImage"
            android:layout_width="match_parent"
            android:layout_height="170sp"
            android:layout_below="@id/back"
            android:padding="20sp"
            app:srcCompat="@drawable/homeimg" />

    </RelativeLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240sp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/favoriteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/gray_heart"
                android:onClick="onFavoriteButtonClick" />
            <TextView
                android:id="@+id/favoriteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorites"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"

                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personnal_information"
                    android:textSize="22sp"
                    android:layout_marginTop="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:id="@+id/personnalInfo"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20sp"
                    android:layout_height="match_parent"
                    android:padding="20sp"
                    android:background="@drawable/card1_style"
                    android:orientation="vertical" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/name"/>

                        <TextView
                            android:id="@+id/doctorNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/emaill"/>

                        <TextView
                            android:id="@+id/doctorEmailTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/gender"/>

                        <TextView
                            android:id="@+id/doctorGenderTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="16sp"/>
                    </LinearLayout>


                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/professional_information"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:id="@+id/profesionalInfo"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20sp"
                    android:layout_height="match_parent"
                    android:padding="20sp"
                    android:requiresFadingEdge="vertical"
                    android:background="@drawable/card1_style"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/ExperienceLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/experience"/>

                        <TextView
                            android:id="@+id/doctorExperienceTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/speciality"/>

                        <TextView
                            android:id="@+id/doctorSpecialityTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>




                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/health_care_facility_information"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:id="@+id/facilityInfo"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20sp"
                    android:layout_height="match_parent"
                    android:padding="20sp"
                    android:background="@drawable/card1_style"
                    android:requiresFadingEdge="vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/price"/>

                        <TextView
                            android:id="@+id/doctorPriceTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/PriceInfoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/price_info"/>

                        <TextView
                            android:id="@+id/doctorPriceInfoTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/location"/>

                        <TextView
                            android:id="@+id/doctorLocationTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/city"/>

                        <TextView
                            android:id="@+id/doctorCityTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/working_schedule"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:id="@+id/workingTimeInfo"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20sp"
                    android:layout_height="match_parent"
                    android:padding="20sp"
                    android:background="@drawable/card1_style"
                    android:requiresFadingEdge="vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/woring_days"/>

                        <TextView
                            android:id="@+id/doctorDaysTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/from"/>

                        <TextView
                            android:id="@+id/doctorStartTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/to"/>

                        <TextView
                            android:id="@+id/doctorFinishTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7sp"
                            android:textSize="14sp"/>
                    </LinearLayout>



                </LinearLayout>




                    <Button
                        android:id="@+id/directionBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/direction"
                        android:drawableLeft="@drawable/location"
                        android:padding="18sp"
                        android:text="@string/show_directions"
                        android:textSize="20sp" />
                <Button
                    android:id="@+id/callDoctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="70sp"
                    android:background="@drawable/call"
                    android:drawableLeft="@drawable/phone"
                    android:padding="18sp"
                    android:text="@string/call_now"
                    android:textSize="20sp" />


            </LinearLayout>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>





</androidx.drawerlayout.widget.DrawerLayout>

